# jarvis

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  NOTES.md  PLANO_MELHORIAS_T1.md  README.md  STATUS.md  decisions.md  pyproject.toml
data/: README.md
scripts/: analyze_dataset.py  gen_relatorio_aprendizado.py  gen_relatorios_auditoria_erros.py  generate_dataset_doc.py  generate_delivery_doc.py  seed_demo.py
spec/000-foundation/: audit.md  design.md  requirements.md  tasks.md
spec/001-core-infrastructure/: audit.md  design.md  requirements.md  tasks.md
spec/002-rag/: design.md  requirements.md  tasks.md
spec/003-agenda/: SPEC.md
spec/004-tasks/: SPEC.md
spec/005-tool-calling/: SPEC.md
spec/006-gui/: SPEC.md
spec/007-learning/: audit.md  design.md  requirements.md  tasks.md
src/: __init__.py  main.py
src/core/: __init__.py  config.py  db.py  health.py  logging.py
src/core/migrations/: 001_initial.sql  002_rag.sql  003_chat.sql  004_calendar_view.sql  005_learning.sql
src/domain/: __init__.py
src/domain/agenda/: __init__.py  models.py  repo.py  service.py
src/domain/calendar_view/: __init__.py  service.py
src/domain/chat/: __init__.py  models.py  repo.py  service.py
src/domain/learning/: __init__.py  models.py  repo.py
src/domain/tasks/: __init__.py  models.py  repo.py  service.py
src/learning/: __init__.py  coach.py  errors.py  generator.py  grader.py  service.py
src/llm/: __init__.py  agent.py  client.py  exceptions.py  gemma_client.py  json_utils.py  types.py
src/rag/: __init__.py  chunk.py  embed.py  ingest.py  pipeline.py  populate.py  prompt.py  retrieve.py  types.py
src/tools/: __init__.py  registry.py  tool_agenda.py  tool_calendar.py  tool_learning.py  tool_materials.py  tool_rag.py  tool_tasks.py
src/ui/: __init__.py  app.py  state.py  theme.py
src/ui/components/: __init__.py  calendar_colors.py  greeting.py  (+8 more)
tests/: conftest.py
tests/integration/: test_agenda_repo.py  test_agent_loop.py  test_calendar_view.py  test_chat_repo.py  test_db_log_tool_call.py  test_db_migrations.py  test_db_pragmas.py  test_gemma_smoke.py  test_generate_quiz_fake_llm.py  test_get_document_chunks.py  test_learning_repo.py  test_migration_002.py  test_migration_005.py  test_tasks_repo.py  test_tool_agenda.py  test_tool_tasks.py
tests/unit/: test_agent_json_parse.py  test_calendar_colors.py  test_chat_service.py  test_chunk.py  test_coach.py  test_config.py  test_generator_prompt.py  test_grader.py  test_greeting.py  test_health.py  test_ingest_quality.py  test_learning_models.py  test_logging.py  test_message_type.py  test_prompt.py  test_quiz_parse.py  test_smoke_import.py
(+6 files in other folders)
