[project]
name = "jarvis-academico"
version = "0.1.0"
description = "JARVIS Acadêmico — assistente inteligente para estudantes (RAG + Tool Calling + Gemma 12B)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Equipe JARVIS — UFMS IA 2026" },
]

dependencies = [
    # LLM client (OpenAI-compatible para endpoint LIA UFMS)
    "openai>=1.40.0",
    # Retry com backoff exponencial (D-014)
    "tenacity>=8.5.0",
    # Embeddings locais
    "sentence-transformers>=3.0.0",
    # Vector store no SQLite
    "sqlite-vec>=0.1.5",
    # Parser de PDFs
    "pdfplumber>=0.11.0",
    # Validação / modelos
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    # Logging
    "loguru>=0.7.2",
    # Carregamento de .env
    "python-dotenv>=1.0.1",
    # GUI
    "nicegui>=2.0.0",
    # Utilidades
    "python-dateutil>=2.9.0",
    # Timezone data IANA (necessario em Windows; no-op em Linux/Mac)
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
jarvis = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ----------------- Ruff -----------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line too long (já controlado pelo formatter)
]

[tool.ruff.lint.per-file-ignores]
# NiceGUI usa nested `with` como padrão idiomático para árvore de componentes
"src/ui/**" = ["SIM117"]
# Testes podem usar pytest.raises(Exception) para checar que qualquer erro foi levantado
"tests/**" = ["B017"]
# Scripts CLI inserem o PROJECT_ROOT em sys.path antes de importar src/ (E402 legítimo)
"scripts/**" = ["E402"]

# ----------------- pytest -----------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "live_llm: testes que batem no endpoint real do LLM (skip a menos que JARVIS_RUN_LIVE_LLM=1)",
]

# ----------------- mypy -----------------
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
